--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,11 @@
 {
-  "HELLO": "hello"
+  "HELP_PAGE": {
+    "TITLE": "Settings & Help",
+    "CONTENT": "<p>The app has been tested on Firefox and Chrome, both on Android and MacOS. There is no guarantee that it works on other Browsers! If you tested it on any other browser and encounter problems, let me know: <a href=\"mailto:moin@frot.io\">moin@frot.io</a> </p>",
+    "PUSH_NOTIFICATIONS": {
+      "TITLE": "Push-Notifications",
+      "CONTENT": "<p>On the first startup, a dialog box at the bottom asks you for enabling push-notifications. If you accidentally clicked 'Deny', you can re-enable them with:<ol><li>If you use a browser: Click on the lock left of the URL and set 'Notification' to 'Ask'.</li><li>If you installed the app: Go to the app settings of your Operating System (Android or iOS) and re-enable Notifications.</li><li>Click the button below.</li></ol></p>",
+      "BUTTON_LABEL": "Clear Permissions an Reload"
+    }
+  }
 }
