--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -35,5 +35,28 @@
     "RECENT_PUSH_NOTIFICATIONS": {
       "TITLE": "Vergangene Push-Notifications"
     }
+  },
+  "PUSH_NOTIFICATION_DIALOG": {
+    "NOT_SUPPORTED": {
+      "TEXT": "Push-Notifications werden von diesem Browser leider nicht unterstützt.",
+      "BUTTON_DISMISS": "OK"
+    },
+    "SUPPORTED": {
+      "TEXT": "Push-Notifications aktivieren?",
+      "BUTTON_AGREE": "Ja",
+      "BUTTON_DISALLOW": "Nein"
+    },
+    "ERROR": {
+      "TEXT": "Fehler beim Aktivieren von Push-Notifications!",
+      "BUTTON_DISMISS": "OK"
+    },
+    "DENIED": {
+      "TEXT": "Push-Notifications wurden abgelehnt.",
+      "BUTTON_DISMISS": "OK"
+    },
+    "GRANTED": {
+      "TEXT": "Du erhälst ab jetzt Push-Notifications!",
+      "BUTTON_DISMISS": "OK"
+    }
   }
 }
