--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,5 +35,28 @@
     "RECENT_PUSH_NOTIFICATIONS": {
       "TITLE": "Recent Push-Notifications"
     }
+  },
+  "PUSH_NOTIFICATION_DIALOG": {
+    "NOT_SUPPORTED": {
+      "TEXT": "Push Notifications are not supported by this browser.",
+      "BUTTON_DISMISS": "Dismiss"
+    },
+    "SUPPORTED": {
+      "TEXT": "Enable Push Notifications?",
+      "BUTTON_AGREE": "Yes",
+      "BUTTON_DISALLOW": "No"
+    },
+    "ERROR": {
+      "TEXT": "There was an error enabling Push Notifications!",
+      "BUTTON_DISMISS": "Dismiss"
+    },
+    "DENIED": {
+      "TEXT": "Push Notifications have been denied.",
+      "BUTTON_DISMISS": "Dismiss"
+    },
+    "GRANTED": {
+      "TEXT": "Push Notifications are enabled!",
+      "BUTTON_DISMISS": "Dismiss"
+    }
   }
 }
