--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,7 +1,7 @@
 {
   "HELP_PAGE": {
     "TITLE": "Einstellungen & Hilfe",
-    "CONTENT": "<p>Die App wurde mit Chrome und Firefox auf Android und MacOS getestet. Support für andere Browser ist nicht garantiert! Falls du einen anderen Browser verwendest und auf Probleme stößt, schreib mir eine Email an <a href=\"mailto:moin@frot.io\">moin@frot.io</a></p>",
+    "CONTENT": "<p>Die App wurde mit folgenden Browsern getestet:<ul><li><strong>Google Chrome</strong> für <a class=\"link\" href=\"https://play.google.com/store/apps/details?id=com.android.chrome&hl=de\">Android</a> und <a class=\"link\" href=\"https://itunes.apple.com/de/app/google-chrome/id535886823?mt=8\">iOS</a></li><li><strong>Firefox</strong> für <a class=\"link\" href=\"https://play.google.com/store/apps/details?id=org.mozilla.firefox&hl=de\">Android</a> und <a class=\"link\" href=\"https://itunes.apple.com/de/app/internet-browser-firefox/id989804926?mt=8\">iOS</a></li><li>Desktop-Versionen von <a class=\"link\" href=\"https://www.google.com/intl/de/chrome/\">Chrome</a> und <a class=\"link\" href=\"https://www.mozilla.org/de/firefox/new/\">Firefox</a></li></ul> Support für andere Browser ist nicht garantiert! Falls du einen anderen Browser verwendest und auf Probleme stößt, schreib mir eine Email an <a href=\"mailto:moin@frot.io\">moin@frot.io</a></p>",
     "ADD_TO_HOMESCREEN": {
       "TITLE": "Zum Startbildschirm hinzufügen",
       "CONTENT": "<p>In mobilen Browsern (Chrome und Firefox) solltest du eine Benachrichtigung am unteren Bildschirmrand sehen: 'Zum Startbildschirm hinzufügen?' wenn du 'Ja' klickst, wird die App heruntergeladen und funktioniert auch offline.</p>"
@@ -13,7 +13,7 @@
     },
     "LANGUAGE_SELECT": {
       "TITLE": "Spracheinstellungen",
-      "CONTENT": "<p>Hier kannst du die Sprache der App ändern.</p>",
+      "CONTENT": "<p>Hier kannst du die Sprache der App ändern. <a class=\"link\" href=\"https://unitedlanguagegroup.com/blog/inside-design-a-language-selector-is-no-place-for-flags/\">Hier</a> kannst du nachlesen, warum Text anstelle von Landesflaggen verwendet wird</a></p>",
       "BUTTON_LABEL_GERMAN": "Deutsch",
       "BUTTON_LABEL_ENGLISH": "Englisch"
     },
