--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,27 @@
     "LOCATIONS": "Locations",
     "HELP": "Settings & Help"
   },
+  "HOME_PAGE": {
+    "TITLE": "Stop Drone Wars!",
+    "WELCOME": {
+      "TITLE": "Welcome!",
+      "CONTENT": "<p>TODO</p>"
+    }
+  },
+  "INFO_PAGE": {
+    "TITLE": "Info",
+    "CONTACT": {
+      "TITLE": "Contact",
+      "CONTENT": "<ul><li><a href=\"mailto:info@ramstein-kampagne.eu\">info@ramstein-kampagne.eu</a></li><li><a href=\"mailto:camp@ramstein-kampagne.eu\">camp@ramstein-kampagne.eu</a></li></ul>"
+    },
+    "EMERGENCY": {
+      "TITLE": "On Emergencies",
+      "CONTENT": "<ul><li>During the Demonstration: <a href=\"tel:+490000000000\">+490000000000</a> (Paramedic)</li><li>In the Camp: <a href=\"tel:+491111111111\">+491111111111</a></li></ul>"
+    },
+    "RECENT_PUSH_NOTIFICATIONS": {
+      "TITLE": "Recent Push-Notifications"
+    }
+  },
   "HELP_PAGE": {
     "TITLE": "Settings & Help",
     "CONTENT": "<p>The app has been tested with:<ul><li><strong>Google Chrome</strong> for <a class=\"link\" href=\"https://play.google.com/store/apps/details?id=com.android.chrome&hl=de\">Android</a> and <a class=\"link\" href=\"https://itunes.apple.com/de/app/google-chrome/id535886823?mt=8\">iOS</a></li><li><strong>Firefox</strong> for <a class=\"link\" href=\"https://play.google.com/store/apps/details?id=org.mozilla.firefox&hl=de\">Android</a> and <a class=\"link\" href=\"https://itunes.apple.com/de/app/internet-browser-firefox/id989804926?mt=8\">iOS</a></li><li>Desktop-Versions of <a class=\"link\" href=\"https://www.google.com/intl/de/chrome/\">Chrome</a> and <a class=\"link\" href=\"https://www.mozilla.org/de/firefox/new/\">Firefox</a></li></ul> There is no guarantee that it works on other Browsers! If you tested it on any other browser and encounter problems, let me know: <a href=\"mailto:moin@frot.io\">moin@frot.io</a> </p>",
@@ -28,20 +49,6 @@
     "FEEDBACK": {
       "TITLE": "Feedback",
       "CONTENT": "<p>For Bugs, Feature-requests or praise, write me an Email: <a href=\"mailto:moin@frot.io\">moin@frot.io</a></p><p>Please do not forget to include your Operating System (Android, MacOS, Windows, iOS...) and the Browser you are using.</p>"
-    }
-  },
-  "INFO_PAGE": {
-    "TITLE": "Info",
-    "CONTACT": {
-      "TITLE": "Contact",
-      "CONTENT": "<ul><li><a href=\"mailto:info@ramstein-kampagne.eu\">info@ramstein-kampagne.eu</a></li><li><a href=\"mailto:camp@ramstein-kampagne.eu\">camp@ramstein-kampagne.eu</a></li></ul>"
-    },
-    "EMERGENCY": {
-      "TITLE": "On Emergencies",
-      "CONTENT": "<ul><li>During the Demonstration: <a href=\"tel:+490000000000\">+490000000000</a> (Paramedic)</li><li>In the Camp: <a href=\"tel:+491111111111\">+491111111111</a></li></ul>"
-    },
-    "RECENT_PUSH_NOTIFICATIONS": {
-      "TITLE": "Recent Push-Notifications"
     }
   },
   "PUSH_NOTIFICATION_DIALOG": {
