Added back to list to en.json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,7 +43,8 @@
       "TITLE": "Demonstration",
       "SUBTITLE": "The big demonstration on saturday",
       "CONTENT": "TODO"
-    }
+    },
+    "BACK_BUTTON_LABEL": "Back to list"
   },
   "LOCATIONS_PAGE": {
     "ADDRESS": "Address",
