Added Markdown to info pages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,8 +16,7 @@
   "INFO_PAGE": {
     "ALLGEMEIN": {
       "TITLE": "General Informations",
-      "SUBTITLE": "Infos about the Peace Movement",
-      "CONTENT": "TODO"
+      "SUBTITLE": "Infos about the Peace Movement"
     },
     "NOTFAELLE": {
       "TITLE": "On Emergencies",
