--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,7 +2,7 @@
   "NAVIGATION": {
     "HOME": "Startseite",
     "INFO": "Info",
-    "CALENDAR": "Kalender",
+    "EVENTS": "Veranstaltungen",
     "LOCATIONS": "Orte",
     "HELP": "Einstellungen & Hilfe"
   },
