--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
   "NAVIGATION": {
     "HOME": "Home",
     "INFO": "Info",
-    "CALENDAR": "Calendar",
+    "EVENTS": "Events",
     "LOCATIONS": "Locations",
     "HELP": "Settings & Help"
   },
