Added Favorites Component

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,6 +3,7 @@
     "HOME": "Startseite",
     "INFO": "Info",
     "EVENTS": "Veranstaltungen",
+    "FAVORITES": "Favoriten",
     "LOCATIONS": "Orte",
     "HELP": "Einstellungen & Hilfe"
   },
