--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,7 @@
     "HOME": "Home",
     "INFO": "Info",
     "EVENTS": "Events",
+    "FAVORITES": "Favorites",
     "LOCATIONS": "Locations",
     "HELP": "Settings & Help"
   },
