--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,6 +38,9 @@
     },
     "BACK_BUTTON_LABEL": "Back to list"
   },
+  "FAVORITES_PAGE": {
+    "NO_FAVORITE": "Please favorite events on the page <strong>Events</strong>"
+  },
   "LOCATIONS_PAGE": {
     "ADDRESS": "Address",
     "READ_MORE": "Read more...",
