Added Friedenswerkstatt to Info section

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -20,6 +20,10 @@
       "TITLE": "Friedenscamp",
       "SUBTITLE": "23.06.2019 – 30.06.2019 ab 9.00 Uhr"
     },
+    "FRIEDENSWERKSTATT": {
+      "TITLE": "Friedenswerkstatt",
+      "SUBTITLE": "auf dem Campinggelände"
+    },
     "FRIEDENSFUSSBALLTURNIER": {
       "TITLE": "Werner Liebrich Friedensfußballturnier",
       "SUBTITLE": "Fußball für den Frieden"
