--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,6 +20,10 @@
       "TITLE": "Peace Camp",
       "SUBTITLE": "Camping Rules and more"
     },
+    "FRIEDENSWERKSTATT": {
+      "TITLE": "Friedenswerkstatt",
+      "SUBTITLE": "on the camping ground"
+    },
     "FRIEDENSFUSSBALLTURNIER": {
       "TITLE": "Peace Soccer Tournament",
       "SUBTITLE": "Sport for Peace"
