Added Legal statement

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -5,7 +5,8 @@
     "EVENTS": "Veranstaltungen",
     "FAVORITES": "Favoriten",
     "LOCATIONS": "Orte",
-    "HELP": "Einstellungen & Hilfe"
+    "HELP": "Einstellungen & Hilfe",
+    "LEGAL": "Impressum"
   },
   "INFO_PAGE": {
     "ALLGEMEIN": {
