--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,8 @@
     "EVENTS": "Events",
     "FAVORITES": "Favorites",
     "LOCATIONS": "Locations",
-    "HELP": "Settings & Help"
+    "HELP": "Settings & Help",
+    "LEGAL": "Legal Information"
   },
   "INFO_PAGE": {
     "ALLGEMEIN": {
