Added Privacy statement

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -6,7 +6,8 @@
     "FAVORITES": "Favoriten",
     "LOCATIONS": "Orte",
     "HELP": "Einstellungen & Hilfe",
-    "LEGAL": "Impressum"
+    "LEGAL": "Impressum",
+    "PRIVACY": "Datenschutz"
   },
   "INFO_PAGE": {
     "ALLGEMEIN": {
