--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,8 @@
     "FAVORITES": "Favorites",
     "LOCATIONS": "Locations",
     "HELP": "Settings & Help",
-    "LEGAL": "Legal Information"
+    "LEGAL": "Legal Information",
+    "PRIVACY": "Privacy"
   },
   "INFO_PAGE": {
     "ALLGEMEIN": {
