--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -41,6 +41,10 @@
     "DEMONSTRATION": {
       "TITLE": "Demonstration",
       "SUBTITLE": "Die große Demo am Samstag"
+      },
+    "BLOCKADE": {
+      "TITLE": "Blockade",
+      "SUBTITLE": "Wir blockieren die Air Base Ramstein!"
     },
     "BACK_BUTTON_LABEL": "Zurück zur Liste"
   },
