Added update button to help section

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -104,9 +104,14 @@
     },
     "LANGUAGE_SELECT": {
       "TITLE": "Spracheinstellungen",
-      "CONTENT": "<p>Hier kannst du die Sprache der App ändern. <a class=\"link\" href=\"https://unitedlanguagegroup.com/blog/inside-design-a-language-selector-is-no-place-for-flags/\">Hier</a> kannst du nachlesen, warum Text anstelle von Landesflaggen verwendet wird</a></p>",
+      "CONTENT": "<p>Hier kannst du die Sprache der App ändern. <a class=\"link\" target=\"_blank\" href=\"https://unitedlanguagegroup.com/blog/inside-design-a-language-selector-is-no-place-for-flags/\">Es wird Text anstelle von Landesflaggen verwendet.</a></p>",
       "BUTTON_LABEL_GERMAN": "Deutsch",
       "BUTTON_LABEL_ENGLISH": "Englisch"
+    },
+    "APP_UPDATE": {
+      "TITLE": "App-Update",
+      "CONTENT": "<p>Hier kannst du manuell nach einer neueren Version der App suchen. Die Suche passiert automatisch alle 6 Stunden. Falls es ein Update gibt, wird eine Benachrichtigung angezeigt.</p>",
+      "BUTTON_LABEL": "Nach Updates suchen"
     },
     "FEEDBACK": {
       "TITLE": "Feedback",
