--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -113,6 +113,11 @@
       "CONTENT": "<p>Hier kannst du manuell nach einer neueren Version der App suchen. Die Suche passiert automatisch alle 6 Stunden. Falls es ein Update gibt, wird eine Benachrichtigung angezeigt.</p>",
       "BUTTON_LABEL": "Nach Updates suchen"
     },
+    "RESET": {
+      "TITLE": "Reset",
+      "CONTENT": "<p>Hier kannst du die App komplett zurücksetzen. <strong>Bitte bedenke, dass dabei auch alle Favoriten gelöscht werden.</strong></p>",
+      "BUTTON_LABEL": "Die App zurücksetzen"
+    },
     "FEEDBACK": {
       "TITLE": "Feedback",
       "CONTENT": "<p>Bei Anregungen, Lob oder Kritik, schreib mir eine Mail an <a href=\"mailto:moin@frot.io\">moin@frot.io</a></p><p>Bitte füge an, welches Betriebsystem (Android, MacOS, Windows, iOS...) und welchen Browser du benutzt.</p>"
