--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -109,6 +109,11 @@
       "CONTENT": "<p>Here you can manually search for a new version of the app. This happens every 6 hours automatically. In case there is an update available, a notification is shown.</p>",
       "BUTTON_LABEL": "Search for updates"
     },
+    "RESET": {
+      "TITLE": "Reset",
+      "CONTENT": "<p>Here you can reset the app completely. <strong>Please be aware that this also deletes all favorites.</strong></p>",
+      "BUTTON_LABEL": "Reset the app"
+    },
     "FEEDBACK": {
       "TITLE": "Feedback",
       "CONTENT": "<p>For Bugs, Feature-requests or praise, write me an Email: <a href=\"mailto:moin@frot.io\">moin@frot.io</a></p><p>Please do not forget to include your Operating System (Android, MacOS, Windows, iOS...) and the Browser you are using.</p>"
