Updated event details

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -52,6 +52,7 @@
     "TIME": "Zeit",
     "LOCATION": "Ort",
     "CATEGORY": "Kategorie",
+    "MODERATION": "Moderation",
     "DETAILS": "Details",
     "WEEKDAYS": {
       "MO": "Mo",
