Fixed: Mismatched Weekdays and Categories

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -55,7 +55,7 @@
     "KEYWORD": "Stichwort",
     "MODERATION": "Moderation",
     "DETAILS": "Details",
-    "KEYWORDS": {
+    "WEEKDAYS": {
       "MO": "Mo",
       "TU": "Di",
       "WE": "Mi",
@@ -63,7 +63,7 @@
       "FR": "Fr",
       "SA": "Sa"
     },
-    "CATEGORIES": {
+    "KEYWORDS": {
       "Int": "International",
       "Umw": "Umweltpolitik",
       "Neo": "Neoliberalismus",
